Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88584

Designer does not completely undo adding a Dock Widget

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 6.1.0 Alpha
    • 5.15.1
    • Tools: Designer
    • None
    • Windows x64
    • Windows
    • fa1178659084e51426b1a1f579b964f4c340f4f9 (qt/qttools/dev)

      Open attached .ui file.

      Drag and drop a dock widget to the bottom of the form.

      Notice that dock widget is added in Object Inspector and in the form.

      Select Undo via the shortcut or Edit menu.

      Notice that the dock widget is removed from the form, but still listed in the Object Inspector

      Also attached is the error received when attempting operations on the dick widget in the Object Inspector.

       

       

        1. Phot.ui
          9 kB
        2. DesignerUndoError.jpg
          DesignerUndoError.jpg
          79 kB
        For Gerrit Dashboard: QTBUG-88584
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            doug_rogers Doug Rogers
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes