Qt Designer: Fix undo adding dock widgets

Use the previously unused AddDockWidget to insert the dock widget
correctly in the QMainWindow container extension.

Fixes: QTBUG-88584
Change-Id: Id93afca8637b9e5090f2655658e19537429d33d8
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>